marco-polo game

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-data-engineering"
 version = "0.1.0"
-# edition = "2025"
+edition = "2024"
 authors = [
     "Rahul Singhai <singrahu@gmail.com>",
 ]
