--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,3 +5,7 @@ FROM mcr.microsoft.com/devcontainers/rust:latest
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
    && apt-get -y install clang lld \
    && apt-get autoremove -y && apt-get clean -y
+RUN rustup toolchain install stable
+RUN rustup update stable
+# Change default to latest stable
+RUN rustup default stable-x86_64-unknown-linux-gnu
