--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+.DS_Store
+.vscode/
+.idea/
+.history/
+
 #ignore onnx file
 *.onnx
 ort
